Initialize gameboard display with basic styling

--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
 </head>
 <body>
     <h1>Tic Tac Toe</h1>
-
+    <div class="gameboard">
+        <div class="cell" data-index="0"><span></span></div>
+        <div class="cell" data-index="1"><span></span></div>
+        <div class="cell" data-index="2"><span></span></div>
+        <div class="cell" data-index="3"><span></span></div>
+        <div class="cell" data-index="4"><span></span></div>
+        <div class="cell" data-index="5"><span></span></div>
+        <div class="cell" data-index="6"><span></span></div>
+        <div class="cell" data-index="7"><span></span></div>
+        <div class="cell" data-index="8"><span></span></div>
+    </div>
 
     <script src="./script.js" defer></script>
 </body>
