--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <h1>Tic Tac Toe</h1>
+    <div class="player-turn">
+        <p>Current player: </p>
+    </div>
     <div class="gameboard">
         <div class="cell" data-index="0"></div>
         <div class="cell" data-index="1"></div>
