--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <h1>Tic Tac Toe</h1>
     <div class="player-turn">
-        <p>Current player: </p>
+        <div id="xTurn">X</div>
+        <div id="oTurn">O</div>
     </div>
     <div class="gameboard">
         <div class="cell" data-index="0"></div>
