Add feature: show winner's name after round ends
`screenController` module receives `getWinner` and `isRoundEnd` from
`gameController` module, to display the game result.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
         <div class="cell" data-index="7"></div>
         <div class="cell" data-index="8"></div>
     </div>
+    <div class="result">
+        <div class="winner">
+            
+        </div>
+    </div>
 
     <script src="./script.js" ></script>
 </body>
