--- a/index.html
+++ b/index.html
@@ -7,17 +7,27 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>Tic Tac Toe</h1>
-    <div class="player-turn">
-        <div id="xTurn">X</div>
-        <div id="oTurn">O</div>
+    <div class="game">
+        <h1>Tic Tac Toe</h1>
+        <div class="player-turn">
+            <div id="xTurn">X</div>
+            <div id="oTurn">O</div>
+        </div>
+        <div class="gameboard">
+        </div>
+        <div class="result">
+            <div class="winner">
+        
+            </div>
+        </div>
     </div>
-    <div class="gameboard">
 
-    </div>
-    <div class="result">
-        <div class="winner">
-            
+
+    <div id="mode-window">
+        <h1>Choose mode</h1>
+        <div class="options">            
+            <button class="option" id="against-bot">Play against robot</button>                
+            <button class="option" id="against-friend">Play with a friend</button>                
         </div>
     </div>
 
