Create a window for bot setting
Created a dedicated window for setting up bot's difficulty, and for
player to choose their side/marker.

--- a/index.html
+++ b/index.html
@@ -31,6 +31,40 @@
         </div>
     </div>
 
+    <div id="robot-window">
+        <h2>Play against robot</h1>
+        
+        <h1>Choose a side</h1>
+        
+        <div class="options">
+            <p>
+                <input type="radio" name="side" id="sideX" value="X">
+                <label for="sideX">X</label>
+            </p>
+            <p>
+                <input type="radio" name="side" id="sideO" value="O">
+                <label for="sideO">O</label>
+            </p>
+        </div>
+
+        <div class="options">
+            <p>
+                <input type="radio" name="diffculty" id="easy" value="easy">
+                <label for="easy">Easy</label>
+            </p>
+            <p>
+                <input type="radio" name="diffculty" id="normal" value="normal">
+                <label for="normal">Normal</label>
+            </p>
+            <p>
+                <input type="radio" name="diffculty" id="hard" value="hard">
+                <label for="hard">Hard</label>
+            </p>
+        </div>
+
+        <button type='button' class="start">Start</button>
+    </div>
+
     <script src="./script.js" ></script>
 </body>
 </html>
