Create styling of robot setting window

--- a/index.html
+++ b/index.html
@@ -36,18 +36,18 @@
         
         <h1>Choose a side</h1>
         
-        <div class="options">
+        <div class="sides">
             <p>
                 <input type="radio" name="side" id="sideX" value="X" checked>
-                <label for="sideX">X</label>
+                <label for="sideX"></label>
             </p>
             <p>
                 <input type="radio" name="side" id="sideO" value="O">
-                <label for="sideO">O</label>
+                <label for="sideO"></label>
             </p>
         </div>
 
-        <div class="options">
+        <div class="difficulties">
             <p>
                 <input type="radio" name="diffculty" id="easy" value="easy">
                 <label for="easy">Easy</label>
