Create styling for friend setting window
Created styling for play with a friend window.
Unified the styling and spacing of both friend window and bot window.

--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
 
     <div id="friend-window">
         <h2>Play with a friend</h1>
-
+        <h1>Enter your names</h1>
         <div class="name-inputs">
             <p>
-                <label for="playerX-name">X</label>
+                <label for="playerX-name"></label>
                 <input type="text" name="playerX-name" id="playerX-name" placeholder="Player X" value="Player X">
             </p>            
             <p>
-                <label for="playerO-name">O</label>
+                <label for="playerO-name"></label>
                 <input type="text" name="playerO-name" id="playerO-name" placeholder="Player O" value="Player O">
             </p>
         </div>
