Create basic styling for game window

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <div class="game">
         <h1>Tic Tac Toe</h1>
         <div class="player-turn">
-            <div id="xTurn">X</div>
-            <div id="oTurn">O</div>
+            <div id="xTurn"></div>
+            <div id="oTurn"></div>
         </div>
         <div class="gameboard">
         </div>
