Add mode: Bot vs Bot
Introduced a new mode where two bots play against each other. When
`screenController` resets the game, it repeatedly calls `botPlays` at
intervals until the round ends or the active player is no longer a bot,
at which point the interval is cleared.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
         <div class="options">            
             <button class="option" id="against-bot">Play against robot</button>                
             <button class="option" id="against-friend">Play with a friend</button>                
+            <button class="option" id="bot-against-bot">Robot against robot</button>                
+
         </div>
     </div>
 
