Create restart button in HTML instead of Javascript

--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
             <div id="xTurn"></div>
             <div id="oTurn"></div>
         </div>
-        <div class="gameboard">
-        </div>
+        <div class="gameboard"></div>
+        <button class="restart">Restart</button>
         <div class="result">
             <div class="winner">
-        
             </div>
         </div>
     </div>
