Add scoring system and score display feature
Implemented scoring system when either player win a round.
When a round ends, the score display updates.

--- a/index.html
+++ b/index.html
@@ -9,10 +9,19 @@
 <body>
     <div class="game">
         <h1>Tic Tac Toe</h1>
-        <div class="player-turn">
-            <div id="xTurn"></div>
-            <div id="oTurn"></div>
+
+        <div class="player-info">
+            <div >
+                <div class="turn" id="xTurn"></div>
+                <div class="score" id="xScore">0</div>
+            </div>
+
+            <div>
+                <div class="turn" id="oTurn"></div>
+                <div class="score" id="oScore">0</div>
+            </div>
         </div>
+
         <div class="gameboard"></div>
         <button class="restart">Restart</button>
         <div class="result">
