Add next round function and switch first player
Implemented `nextRound` function, triggered by the `nextRnd` button
once the round ends.
It resets the board and `winner` value, then switches the active player.
In new round, the player who lost or didn't start the previous round
will now go first.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
         </div>
 
         <div class="gameboard"></div>
-        <button class="restart">Restart</button>
+
+        <div class="nav-buttons">
+            <button class="restart">Restart</button>
+            <button class="nextRnd">Next Round</button>
+        </div>
+        
         <div class="result">
             <div class="winner">
             </div>
