Add feature: New game from scratch
Added a New Game button below the game board. When clicked, it pauses
the game (if two bots are still playing), and returns to the home page,
allowing players to start a new game.

If a game has already been created, `startGame` in `gameSettings` won't
reinitializing `gameController`. Instead, it first resets round data
then executes the `newGame` function.

Implemented `newGame` in `gameController` to update game parameters,
reset the board, winner, and scores, and call `setPlayers` to recreate
players. The active and first players are also reset.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <button class="restart">Restart</button>
             <button class="nextRnd">Next Round</button>
         </div>
+        <button class="new-game">New game</button>
         
         <div class="result">
             <div class="winner">
@@ -38,11 +39,10 @@
 
     <div id="mode-window">
         <h1>Choose mode</h1>
-        <div class="options">            
-            <button class="option" id="against-bot">Play against robot</button>                
-            <button class="option" id="against-friend">Play with a friend</button>                
-            <button class="option" id="bot-against-bot">Robot against robot</button>                
-
+        <div class="options">
+            <button class="option" id="against-bot">Play against robot</button>
+            <button class="option" id="against-friend">Play with a friend</button>
+            <button class="option" id="bot-against-bot">Robot against robot</button>
         </div>
     </div>
 
