Style buttons in gameDiv, adjust winner div
Refined styling of next round button.
Fixated height of winner div.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
             </div>
         </div>
 
+        <div class="result">
+            <div class="winner"></div>
+        </div>
+        
         <div class="gameboard"></div>
 
         <div class="nav-buttons">
@@ -30,10 +34,7 @@
         </div>
         <button class="new-game">New game</button>
         
-        <div class="result">
-            <div class="winner">
-            </div>
-        </div>
+
     </div>
 
 
