Style option buttons of home page

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="result">
             <div class="winner"></div>
         </div>
-        
+
         <div class="gameboard"></div>
 
         <div class="nav-buttons">
@@ -39,11 +39,24 @@
 
 
     <div id="mode-window">
-        <h1>Choose mode</h1>
+        <h1>Tic Tac Toe</h1>
+        <h2>Choose mode</h2>
         <div class="options">
-            <button class="option" id="against-bot">Play against robot</button>
-            <button class="option" id="against-friend">Play with a friend</button>
-            <button class="option" id="bot-against-bot">Robot against robot</button>
+            <button class="option" id="against-bot">
+                <img src="./img/bot-icon-yellow.svg" alt="bot icon">
+                Play against robot
+            </button>
+            <button class="option" id="against-friend">
+                <img src="./img/multiplayer-icon.svg" alt="player icon">
+                Play with a friend
+            </button>
+            <button class="option" id="bot-against-bot">
+                <div>
+                    <img src="./img/bot-icon-yellow.svg" alt="bot icon">
+                    <img src="./img/bot-icon-yellow.svg" alt="bot icon">
+                </div>
+                Robot against robot
+            </button>
         </div>
     </div>
 
