Fix typo: From "diffculty" to "diffculty"

--- a/index.html
+++ b/index.html
@@ -75,15 +75,15 @@
 
         <div class="difficulties">
             <p>
-                <input type="radio" name="diffculty" id="easy" value="easy">
+                <input type="radio" name="difficulty" id="easy" value="easy">
                 <label for="easy">Easy</label>
             </p>
             <p>
-                <input type="radio" name="diffculty" id="normal" value="normal" checked>
+                <input type="radio" name="difficulty" id="normal" value="normal" checked>
                 <label for="normal">Normal</label>
             </p>
             <p>
-                <input type="radio" name="diffculty" id="hard" value="hard">
+                <input type="radio" name="difficulty" id="hard" value="hard">
                 <label for="hard">Hard</label>
             </p>
         </div>
